--- a/web/index.html
+++ b/web/index.html
@@ -30,6 +30,8 @@
 		<div class="row">
 
 			<div class="col-sm-8 col-sm-offset-2">
+
+				<h1>Стартовый шаблон</h1>
 				
 				<img class="img-responsive" src="img/wallpaper.jpg" alt="Start HTML5 Template">
 
